# simple-desktop-capture

./: CMakeLists.txt  capture.c
include/: desktop-capture-types.h  desktop-capture.h  simple-desktop-capture-types.h  simple-desktop-capture.h
src/: simple-desktop-capture.c
src/platform/: platform-desktop-capture.h
src/platform/win/: desktop-capture-dxgi.c  desktop-capture-dxgi.h  platform-desktop-capture.c  win-desktop-capture.c
